# mnq_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
apex_v3_framework/: QUICKSTART.md  README.md  setup.sh
apex_v3_framework/docs/: DATABENTO_SETUP.md  EDGE_SPEC_V2.md
apex_v3_framework/live_deployment/: live_config.example.yaml
apex_v3_framework/pine/: MNQ_Apex_v2_Firm.pine
apex_v3_framework/python/: autocalibrator.py  autopilot.py  backtest.py  bulk_fetch.py  confluence_scorer.py  court_of_appeals.py  databento_fetcher.py  edge_discovery.py  execution_analyzer.py  firm_engine.py  firm_meta.py  indicator_state.py  master_test.py  micro_ab_test.py  microstructure.py  monte_carlo.py  mtf_context.py  multi_tf_backtest.py  optimize_v3.py  parquet_adapter.py  regime_ml.py  v2_filter_validator.py  v2_runner.py  v3_backtest.py  v3_engine.py  v3_final.py  walkforward.py  webhook.py
apex_v3_framework/results/: by_dow.csv  by_dow_setup.csv  by_regime.csv  by_setup.csv  by_setup_regime.csv  by_setup_tod.csv
apex_v3_framework/scripts/: run_optimal_v3.sh
apex_v3_framework/v1_locked/: backtest.py  firm_engine.py  indicator_state.py  intermarket.py
data/: backtest_fills.jsonl  backtest_real_daily.json  backtest_real_ensemble_daily.json  backtest_real_micro_daily.json  backtest_real_v3_daily.json  backtest_real_validate.json  heartbeat.json  learner_journal.jsonl  loss_streak_state.json  meta_config.json  open_positions.json  outcome_gate_weights.json  pretrade_checks.jsonl  rollouts.json
deploy/: README.md  kill-switch.sh
deploy/systemd/: mnq-bot.service  mnq-bot.timer
docs/: ALERT_CONTRACT.md  HANDOFF_TO_COWORK.md  IMPLEMENTATION_NOTES.md  RED_TEAM_REVIEW_2026_04_25.md  RUNBOOK.md  TRADOVATE_NOTES.md  eta_V3_QUANT_FOLD.md
docs/paper_soak/: plan_2026-05-01.json  (+1 more)
eta_v3_framework/: requirements.txt
firm/: SKILL.md
models/: scorer.pkl
reports/: ai_reviewer.md  alerting.md  anomaly.md  apex_meta_orchestrator.md  apex_v3.md  apex_v3_bridge.md  apex_v3_enrich.md  apex_v3_meta.md  apex_v3_probe.md  auto_screenshot.md  backtest_real.md  backtest_real_analysis.md  backtest_real_ensemble.md  backtest_real_ensemble_trades.csv  backtest_real_micro.md  backtest_real_micro_trades.csv  backtest_real_trades.csv  backtest_real_v3.md  backtest_real_v3_trades.csv  backtest_real_validate.csv  backtest_real_validate.md  bayesian_expectancy.md  block_bootstrap.json  breadth.md  bug_journal.md  burn_in.md  calibration.md  correlation_cap.md  counterfactual.md  crash_recovery.md  cumulative_delta.md  current_status_inventory_and_roadmap.md  deadman_switch.md  earnings_amp.md  edge_decay.md  edge_forensics.json  edge_forensics.md  email_recap.md  encrypted_backup.md  eta_v3_probe.md  (+70 more)
scripts/: _audit_deferral_criteria.py  _audit_spec_vs_code.py  _compat_startup.py  _pre_commit_check.py  _promotion_gate.py  _trade_utils.py  ai_reviewer.py  alerting.py  anomaly_detect.py  apex_meta_orchestrator.py  apex_v3_bridge.py  apex_v3_enrich.py  apex_v3_meta.py  apex_v3_probe.py  auto_screenshot.py  backtest_baseline_export.py  backtest_real.py  backtest_real_analysis.py  backtest_real_ensemble.py  backtest_real_micro.py  backtest_real_v3.py  backtest_real_validate.py  bayesian_expectancy.py  breadth_monitor.py  burn_in_72h.py  calibration.py  correlation_cap.py  counterfactual.py  crash_recovery_test.py  cumulative_delta.py  daily_digest.py  dashboard.py  deadman_switch.py  earnings_amp.py  edge_decay.py  edge_forensics.py  email_recap.py  encrypted_backup.py  eta_meta_orchestrator.py  eta_v3_bridge.py  (+71 more)
(+2348 files in other folders)
