[project]
name = "mnq-bot"
version = "0.0.1"
description = "Self-learning MNQ scalping system with Tradovate execution"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
    # Numerics
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "scipy>=1.13",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    # Networking
    "httpx>=0.27",
    "websockets>=12.0",
    "tenacity>=8.4",
    # CLI / config
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # MCP
    "mcp>=1.0",
    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.20",
    # Calendars
    "pandas-market-calendars>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
mnq = "mnq.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = [
    "E501",    # line length handled by formatter
    "RET504",  # unnecessary-assign — tolerated for readability
    "SIM102",  # collapsed-if — sometimes nested reads better
    "UP042",   # (str, Enum) is intentional for JSON-serialisable core types
]

[tool.ruff.lint.per-file-ignores]
# AST visitor classes follow the standard `visit_<NodeType>` pattern where
# NodeType is a PascalCase class name. That is an established convention and
# should not be mangled to lowercase.
"src/mnq/generators/pine/generator.py"       = ["N802"]
"src/mnq/generators/python_exec/generator.py" = ["N802"]
# Test methods frequently embed HTTP verbs or Tradovate field names
# (`errorText`, `failureReason`, `GET`) that read clearer in mixed case.
"tests/**/*.py" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
# Third-party libs without stubs
[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "pandas_market_calendars.*",
    "pandas.*",
    "duckdb.*",
    "pyarrow.*",
    "structlog.*",
    "prometheus_client.*",
    "polars.*",
    "websockets.*",
    "typer.*",
    "rich.*",
    "scipy.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "level1: pure unit tests, no I/O",
    "level2: property tests with hypothesis",
    "level3: parity tests against pine reference data",
    "level4: replay against historical data",
    "level5: integration with mock WS",
    "level6: chaos tests with fault injection",
    "level7: paper soak (slow)",
    "level8: shadow validation (slow)",
]

[tool.coverage.run]
branch = true
source = ["src/mnq"]
omit = [
    # Entrypoints exercised via the CLI smoke suite, not unit-tested.
    "src/mnq/cli/main.py",
    "src/mnq/cli/venue.py",
    # Agents are intentionally out-of-scope per handoff.
    "src/mnq/agents/*",
    # Generated-file templates; tested indirectly via parity tests.
    "src/mnq/generators/*/_templates/*",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 1
